# image-date-fixer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  image-date-fixer.py  requirements.txt
docs/: useful_commands.md
src/: errors.rs  exiftool.rs  logging.rs  main.rs  pretty_duration.rs  tie_command_to_self.rs
src/date_extractors/: android_style_image_paths.rs  custom_date_prefixed_style_image_paths.rs  mod.rs  screenshot_prefixed_style_image_paths.rs  unix_time_stamp_prefixed_style_image_paths.rs  uuid_timestamp_prefixed_image_paths.rs  whatsapp_style_image_paths.rs
v1/: README.md  image-date-fixer.py  setup_logging.py
v2/: Cargo.toml
v2/src/: exiftool.rs  main.rs
v2/src/date_extractors/: android_style_image_paths.rs  custom_date_prefixed_style_image_paths.rs  mod.rs  screenshot_prefixed_style_image_paths.rs  uuid_timestamp_prefixed_image_paths.rs  whatsapp_style_image_paths.rs
