[package]
name = "image-date-fixer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chumsky = "0.9"
chrono = "0.4"
walkdir = "2.5"
rayon = "1.10"
ctrlc = "3.4"
regex = "1.11"
ariadne = { version = "0.5", features = ["auto-color"] }
nom = "8.0"

[dev-dependencies]
lazy_static = "1.5"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
